<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="contribuiEsVM" type="com.cidadeprogressofiap.app.modules.contribuies.data.viewmodel.ContribuiEsVM"/>
    </data>
    <LinearLayout android:id="@+id/linearContribuiEs"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_46pxv"
        android:paddingEnd="@dimen/_20pxh"
        android:paddingStart="@dimen/_20pxh"
        android:paddingTop="@dimen/_46pxv" style="@style/groupStylegray_900">
        <ImageView android:id="@+id/imageUserprofileOne"
            android:layout_gravity="start"
            android:layout_height="@dimen/_42pxh"
            android:layout_width="@dimen/_42pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_user_profile_adobe_express"
            tools:ignore="ContentDescription" tools:src="@drawable/img_user_profile_adobe_express"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtEscolhaotipo"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_45pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{contribuiEsVM.contribuiEsModel.txtEscolhaotipo}"
            style="@style/txtInterbold21" tools:text="@string/msg_escolha_o_tipo_da"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNova"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginEnd="@dimen/_4pxh"
            android:layout_marginStart="@dimen/_7pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="@dimen/_338pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/msg_nova_solicita_o"
            android:textAllCaps="false" style="@style/btnSolidRounded_2" tools:text="@string/msg_nova_solicita_o"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtReparode"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{contribuiEsVM.contribuiEsModel.txtReparode}"
            style="@style/txtAmikosemibold14" tools:text="@string/msg_reparo_de_buracos"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNova1"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginEnd="@dimen/_4pxh"
            android:layout_marginStart="@dimen/_7pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="@dimen/_338pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/msg_nova_solicita_o2"
            android:textAllCaps="false" style="@style/btnSolidRounded_2" tools:text="@string/msg_nova_solicita_o2"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtPedidopontode"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{contribuiEsVM.contribuiEsModel.txtPedidopontode}"
            style="@style/txtAmikosemibold14" tools:text="@string/msg_pedido_ponto_de"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNova2"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginEnd="@dimen/_3pxh"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="@dimen/_338pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/msg_nova_solicita_o3"
            android:textAllCaps="false" style="@style/btnSolidRounded_2" tools:text="@string/msg_nova_solicita_o3"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtSugestode"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{contribuiEsVM.contribuiEsModel.txtSugestode}"
            style="@style/txtAmikosemibold14" tools:text="@string/msg_sugest_o_de_sinaliza_o"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNova3"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="@dimen/_338pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_27pxh"
            android:paddingStart="@dimen/_27pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/msg_nova_solicita_o4"
            android:textAllCaps="false" style="@style/btnSolidRounded_2" tools:text="@string/msg_nova_solicita_o4"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtPedidode"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{contribuiEsVM.contribuiEsModel.txtPedidode}"
            style="@style/txtAmikosemibold14" tools:text="@string/msg_pedido_de_rampas"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNova4"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginEnd="@dimen/_2pxh"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_marginTop="@dimen/_49pxv"
            android:layout_width="@dimen/_338pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_25pxh"
            android:paddingStart="@dimen/_25pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/msg_nova_solicita_o5"
            android:textAllCaps="false" style="@style/btnSolidRounded_3" tools:text="@string/msg_nova_solicita_o5"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtCasoseupedido"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5pxv"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{contribuiEsVM.contribuiEsModel.txtCasoseupedido}"
            style="@style/txtAmikosemibold14" tools:text="@string/msg_caso_seu_pedido"/>
    </LinearLayout>
</layout>
