<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="telaInicialVM" type="com.cidadeprogressofiap.app.modules.telainicial.data.viewmodel.TelaInicialVM"/>
    </data>
    <LinearLayout android:id="@+id/linearTelaInicial"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_37pxv"
        android:paddingEnd="@dimen/_19pxh"
        android:paddingStart="@dimen/_19pxh"
        android:paddingTop="@dimen/_37pxv" style="@style/groupStylegray_900">
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowuserprofile"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageUserprofileOne"
                android:layout_gravity="bottom"
                android:layout_height="@dimen/_42pxh"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="@dimen/_42pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_user_profile_adobe_express"
                tools:ignore="ContentDescription" tools:src="@drawable/img_user_profile_adobe_express"/>
            <FrameLayout android:id="@+id/frameStack"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/_61pxv"
                android:layout_marginStart="@dimen/_226pxh" android:layout_width="@dimen/_54pxh">
                <ImageButton android:id="@+id/btnIconbutton"
                    android:layout_gravity="top|center"
                    android:layout_height="@dimen/_53pxh"
                    android:layout_width="@dimen/_54pxh"
                    android:scaleType="fitCenter" tools:ignore="ContentDescription"/>
                <TextView android:ellipsize="end" android:id="@+id/txt"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{telaInicialVM.telaInicialModel.txt}"
                    style="@style/txtActorregular50" tools:text="@string/lbl"/>
            </FrameLayout>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameStackolgabrielv"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_30pxv"
            android:layout_marginTop="@dimen/_25pxv" android:layout_width="@dimen/_293pxh">
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtOlgabrielvoc"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{telaInicialVM.telaInicialModel.txtOlgabrielvoc}"
                style="@style/txtInterbold24" tools:text="@string/msg_ol_gabriel_voc"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtOlgabrielvoc1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{telaInicialVM.telaInicialModel.txtOlgabrielvoc1}"
                style="@style/txtInterbold24" tools:text="@string/msg_ol_gabriel_voc"/>
        </FrameLayout>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtPontosCounter"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{telaInicialVM.telaInicialModel.txtPontosCounter}"
            style="@style/txtAmikosemibold35" tools:text="@string/lbl_25_340_pontos"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnHistricoDe" android:layout_gravity="end"
            android:layout_height="@dimen/_49pxv"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="@dimen/_180pxh"
            android:paddingHorizontal="@dimen/_16pxh"
            android:paddingVertical="@dimen/_16pxv"
            android:singleLine="true"
            android:text="@string/msg_hist_rico_de_pontos"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/msg_hist_rico_de_pontos"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtVocjrealizou"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_51pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{telaInicialVM.telaInicialModel.txtVocjrealizou}"
            style="@style/txtInterbold24" tools:text="@string/msg_voc_j_realizou"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtContribuiesco"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{telaInicialVM.telaInicialModel.txtContribuiesco}"
            style="@style/txtAmikosemibold35" tools:text="@string/msg_8_contribui_es"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnHistricoDe1"
            android:layout_gravity="end"
            android:layout_height="@dimen/_49pxv"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="@dimen/_200pxh"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_9pxh"
            android:paddingStart="@dimen/_9pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/msg_hist_rico_de_solicita_es"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/msg_hist_rico_de_solicita_es"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtVejaasltimas"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_41pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{telaInicialVM.telaInicialModel.txtVejaasltimas}"
            style="@style/txtInterbold24" tools:text="@string/msg_veja_as_ltimas"/>
        <ImageView android:id="@+id/imageImagetwoOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_191pxh"
            android:layout_marginBottom="@dimen/_5pxv"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_width="@dimen/_322pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_22pxh}"
            imageRes="@{@drawable/img_image_2}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image_2"/>
    </LinearLayout>
</layout>
